create profile entity and finished with service and controller for the same , have to add some validations and fix other validations from user